--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <title>Mess Portal</title>
+    <meta itemprop="name" content="Mess Portal" />
+    <meta property="og:title" content="Mess Portal" />
+    <meta name="twitter:title" content="Mess Portal" />
+
+    <link rel="icon" href="https://mess.roshan.cyou/assets/icon.png" />
+    <link rel="apple-touch-icon" href="https://mess.roshan.cyou/assets/icon.png" />
+    <link rel="shortcut icon" href="https://mess.roshan.cyou/assets/icon.png" type="image/x-icon">
 
     <style>
         #loader_block {
