--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,9 +9,9 @@
     <meta property="og:title" content="Mess Portal" />
     <meta name="twitter:title" content="Mess Portal" />
 
-    <link rel="icon" href="https://mess.roshan.cyou/assets/icon.png" />
-    <link rel="apple-touch-icon" href="https://mess.roshan.cyou/assets/icon.png" />
-    <link rel="shortcut icon" href="https://mess.roshan.cyou/assets/icon.png" type="image/x-icon">
+    <link rel="icon" href="https://mess.dashroshan.com/assets/icon.png" />
+    <link rel="apple-touch-icon" href="https://mess.dashroshan.com/assets/icon.png" />
+    <link rel="shortcut icon" href="https://mess.dashroshan.com/assets/icon.png" type="image/x-icon">
 
     <style>
         #loader_block {
